k8s/infra/network/gateway/gateway-class-haproxy.yaml
#apiVersion: gateway.networking.k8s.io/v1
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: haproxy
spec:
  controllerName: haproxy.org/gateway-controller
