k8s/infra/network/gateway/gw-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  namespace: gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 192.168.50.222
  listeners:
    - hostname: "*.emisia.net"
      protocol: HTTPS
      port: 443
      name: https-gateway
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-emisia-wildcard
      allowedRoutes:
        namespaces:
          from: All
    - hostname: emisia.net
      protocol: HTTPS
      port: 443
      name: https-domain-gateway
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-emisia-wildcard
      allowedRoutes:
        namespaces:
          from: All
