k8s/infra/network/gateway/gw-internal-production.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: internal-production
  namespace: gateway
spec:
  gatewayClassName: haproxy
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 192.168.50.220
  listeners:
    - hostname: "*.emisia.net"
      protocol: HTTPS
      port: 443
      name: https-gateway
      tls:  
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: cert-emisia-wildcard-production
      allowedRoutes:
        namespaces:
          from: All
    - hostname: emisia.net
      protocol: HTTPS
      port: 443
      name: https-domain-gateway
      tls:  
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: cert-emisia-wildcard-production
      allowedRoutes:
        namespaces:
          from: All
