k8s/infra/network/gateway/gw-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: gateway
  annotations:
    cert-manager.io/issuer: cloudflare-cluster-issuer
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 192.168.50.220
  listeners:
    - hostname: "*.emisia.net"
      protocol: HTTPS
      port: 443
      name: https-gateway
      tls:  
        mode: Terminate
        certificateRefs:
          - name: cert-emisia-wild
            kind: Secret
            group: core      
      allowedRoutes:
        namespaces:
          from: All
    - hostname: emisia.net
      protocol: HTTPS
      port: 443
      name: https-domain-gateway
      tls:  
        mode: Terminate
        certificateRefs:
          - name: cert-emisia-wild
            kind: Secret
            group: core      
      allowedRoutes:
        namespaces:
          from: All
